--- a/Todo.txt
+++ b/Todo.txt
@@ -1,4 +1,5 @@
 [Dev]
+o Handle the pressure
 o Handle the move of an item with its selection rect visible
 o Handle the resize of an item
 o Handle grouping / ungrouping of items
@@ -8,5 +9,7 @@ o Code the panning tool
 [Improvements]
 o Unselect all items when switching to another tool in the toolbar
 o Rework the lines interpolation
+o Redo the debug panel
+
 
 [Bugs]
